# reid

./: .gitignore  README.md
alg/: install.sh
alg/reid/: AlgInterface.h  AlgReID.cpp  CMakeLists.txt  Common.h  reid.json
alg/reid/test/: AlgLoader.h  CMakeLists.txt  VideoAnalyzer.cpp  VideoAnalyzer.h  VideoPipeline.cpp  VideoPipeline.h  main.cpp
spl/: CMakeLists.txt  Common.h  SplInterface.cpp  SplInterface.h  VideoPipeline.cpp  VideoPipeline.h  install.sh  spl.json
spl/test/: CMakeLists.txt  DataDoubleCache.h  DataInterface.h  DataMailbox.h  config.json  main.cpp
